--- a/package.json
+++ b/package.json
@@ -9,13 +9,16 @@
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
-    "antd": "^5.7.3",
+    "antd": "^5.8.2",
     "react": "^18.2.0",
     "react-chat-elements": "^12.0.10",
     "react-dom": "^18.2.0",
     "react-draft-wysiwyg": "^1.15.0",
+    "react-flow": "^1.0.3",
+    "react-flow-renderer": "^10.3.17",
     "react-router-dom": "^6.14.2",
     "react-scripts": "5.0.1",
+    "reactflow": "^11.7.4",
     "sass": "^1.64.1",
     "web-vitals": "^2.1.4"
   },
